added server files

--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
     "start-client": "cd client && npm run start"
   },
   "keywords": [],
-  "author": "",
+  "author": "Vaibhav",
   "license": "ISC"
 }
