--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
+    "crypto-js": "^4.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-bootstrap": "^2.10.2",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.1",
+    "react-toastify": "^10.0.5",
+    "redux-saga": "^1.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
