--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
     "@reduxjs/toolkit": "^2.2.5",
+    "@tsparticles/react": "^3.0.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "crypto-js": "^4.2.0",
