--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@reduxjs/toolkit": "^2.2.5",
     "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.4.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "crypto-js": "^4.2.0",
