--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
-    "redux-saga": "^1.3.0"
+    "redux-saga": "^1.3.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
