--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.4.0",
+    "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "crypto-js": "^4.2.0",
